--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   },
   "dependencies": {
     "@mdx-js/react": "^3.0.0",
+    "bootstrap": "^5.3.2",
     "gatsby": "^5.13.2",
+    "gatsby-omni-font-loader": "^2.0.2",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-mdx": "^5.13.1",
@@ -27,7 +30,9 @@
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "sass": "^1.70.0"
   }
 }
