--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-slick": "^0.30.1",
     "sass": "^1.70.0"
   }
 }
