--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "sriprasadwebsite",
-  "version": "1.0.0",
-  "private": true,
-  "description": "sriprasadwebsite",
-  "author": "Kishan B",
-  "keywords": [
-    "gatsby"
-  ],
-  "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
-  },
-  "dependencies": {
-    "@mdx-js/react": "^3.0.0",
-    "bootstrap": "^5.3.2",
-    "gatsby": "^5.13.2",
-    "gatsby-omni-font-loader": "^2.0.2",
-    "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-image": "^3.13.1",
-    "gatsby-plugin-manifest": "^5.13.1",
-    "gatsby-plugin-mdx": "^5.13.1",
-    "gatsby-plugin-sass": "^6.13.1",
-    "gatsby-plugin-sharp": "^5.13.1",
-    "gatsby-plugin-sitemap": "^6.13.1",
-    "gatsby-source-filesystem": "^5.13.1",
-    "gatsby-transformer-remark": "^6.13.1",
-    "gatsby-transformer-sharp": "^5.13.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.0",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "react-slick": "^0.30.1",
-    "sass": "^1.70.0"
-  }
+	"name": "sriprasadwebsite",
+	"version": "1.0.0",
+	"private": true,
+	"description": "sriprasadwebsite",
+	"author": "Kishan B",
+	"keywords": [
+		"gatsby"
+	],
+	"browser": {
+		"crypto": false
+	},
+	"scripts": {
+		"develop": "gatsby develop",
+		"start": "gatsby develop",
+		"build": "gatsby build",
+		"serve": "gatsby serve",
+		"clean": "gatsby clean"
+	},
+	"dependencies": {
+		"@mdx-js/react": "^3.0.0",
+		"bootstrap": "^5.3.2",
+		"gatsby": "^5.13.2",
+		"gatsby-omni-font-loader": "^2.0.2",
+		"gatsby-plugin-google-fonts": "^1.0.1",
+		"gatsby-plugin-image": "^3.13.1",
+		"gatsby-plugin-manifest": "^5.13.1",
+		"gatsby-plugin-mdx": "^5.13.1",
+		"gatsby-plugin-sass": "^6.13.1",
+		"gatsby-plugin-sharp": "^5.13.1",
+		"gatsby-plugin-sitemap": "^6.13.1",
+		"gatsby-source-filesystem": "^5.13.1",
+		"gatsby-transformer-remark": "^6.13.1",
+		"gatsby-transformer-sharp": "^5.13.1",
+		"react": "^18.2.0",
+		"react-bootstrap": "^2.10.0",
+		"react-dom": "^18.2.0",
+		"react-helmet": "^6.1.0",
+		"react-slick": "^0.30.1",
+		"sass": "^1.70.0"
+	}
 }
