--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"react-bootstrap": "^2.10.0",
 		"react-dom": "^18.2.0",
 		"react-helmet": "^6.1.0",
+		"react-jotform-embed": "^1.1.3",
 		"react-slick": "^0.30.1",
 		"sass": "^1.70.0"
 	}
